# sports-betting-market-edge

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/agents/: backtesting-agent.md  betting-math-agent.md  code-review-agent.md  data-agent.md  documentation-agent.md  evaluation-agent.md  feature-engineering-agent.md  modeling-agent.md  project-manager-agent.md
docs/: data_collection.md  event_matching.md  odds_ingestion.md  research_plan.md  team_mapping.md  tech_stack.md
scripts/: collect_real_nba_games.py  collect_real_odds_month.py  collect_real_odds_sample.py  evaluate_real_market_baseline_sample.py  inspect_real_nba_games.py  match_real_odds_month.py  match_real_odds_sample.py  run_real_data_dry_run.py  run_sample_pipeline.py  run_toy_model_training.py
src/backtesting/: simple_backtest.py
src/betting/: bet_filter.py  expected_value.py  odds_conversion.py  vig_removal.py
src/data/: collect_nba_games.py  collect_odds.py  match_events.py  merge_datasets.py  schema_validation.py  team_mapping.py
src/evaluation/: model_metrics.py
src/features/: market_features.py  rolling_stats.py  (+1 more)
tests/: test_baseline.py  test_bet_filter.py  test_collect_nba_games.py  test_collect_odds.py  test_expected_value.py  test_logistic_model.py  test_market_features.py  test_match_events.py  test_merge_datasets.py  test_model_metrics.py  test_odds_conversion.py  test_rolling_stats.py  test_schema_validation.py  test_simple_backtest.py  test_team_game_rows.py  test_team_mapping.py  test_time_split.py  test_vig_removal.py
(+3 files in other folders)
